--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  <!-- <img class="top" src="images/bg-pattern-top.svg" alt=""> -->
-   <div class="bg-top"></div>
+  <div class="container">
+    <div class="img1"><img class="bg-tl" src="/images/bg-pattern-top.svg" alt="bg-pattern-top"></div>
+    <div><img class="bg-br" src="/images/bg-pattern-bottom.svg" alt="bg-pattern-bottom"></div>
     <div class="card">
       <div class="section1">
         <div class="cricle"></div>
@@ -41,23 +36,7 @@
         </div>
       </div>
     </div>
-  <div class="bg-bottom"></div>
-   
-  <!-- Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>. -->
+  </div>
   
 </body>
 </html>
