--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="cricle"></div>
       </div>
       <div class="section2">
-        <h3>Victor Crest <span>26</span></h3>
+        <h3>Mohtashim Ali <span>26</span></h3>
         <p>London</p>
         <hr>
         <div class="sub-section">
