--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Profile card component</title>
 </head>
-<body>
- 
 
- 
-    <div class="card">
-      <div class="section1">
-        <div class="cricle"></div>
-      </div>
-      <div class="section2">
-        <h3>Mohtashim Ali <span>26</span></h3>
-        <p>London</p>
-        <hr>
-        <div class="sub-section">
-          <div class="status followers">
-            <h3>80k</h3>
-            <span>Followers</span>
-          </div>
-          <div class="status likes">
-            <h3>803k</h3>
-              <span>Likes</span>
-          </div>
-          <div class="status photos">
-            <h3>1.4k</h3>
-            <span>Photos</span>
-          </div>
+<body>
+
+
+
+  <div class="card">
+    <div class="section1">
+      <div class="cricle"></div>
+    </div>
+    <div class="section2">
+      <h3>Victor Crest <span>26</span></h3>
+      <p>London</p>
+      <hr>
+      <div class="sub-section">
+        <div class="status followers">
+          <h3>80k</h3>
+          <span>Followers</span>
+        </div>
+        <div class="status likes">
+          <h3>803k</h3>
+          <span>Likes</span>
+        </div>
+        <div class="status photos">
+          <h3>1.4k</h3>
+          <span>Photos</span>
         </div>
       </div>
     </div>
+  </div>
 
-  
+
 </body>
+
 </html>
